# zcapture

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  captureoverlay.cpp  captureoverlay.h  main.cpp  mainwindow.cpp  mainwindow.h
src/tools/: CMakeLists.txt
src/tools/abstractactiontool/: CMakeLists.txt  captureactionbar.cpp  captureactionbar.h  captureactions.cpp  captureactions.h
src/tools/abstracttwopointtool/: CMakeLists.txt  selectionhandles.cpp  selectionhandles.h  selectionwidget.cpp  selectionwidget.h
src/widgets/capture/: CMakeLists.txt  buttonhandler.cpp  buttonhandler.h  capturetoolbutton.cpp  capturetoolbutton.h  selectionwidget.cpp
